--- a/qiye/css/style.css
+++ b/qiye/css/style.css
@@ -1,5 +1,5 @@
 *{margin:0; padding:0;}
-html{font-size:14px; font-family:'Microsoft YaHei','微软雅黑','宋体','黑体',Verdana, Geneva, sans-serif;color:#000;}
+html{font-size:14px; font-family:'Microsoft YaHei','微软雅黑','宋体','黑体',Verdana, Geneva, sans-serif;color:#000;background:#fbf6ef;}
 a{color:#000;text-decoration:none;}
 a:hover{text-decoration:underline;color:#fa5000;}
 img{border:none;}
@@ -7,7 +7,7 @@ input, select,textarea{border:1px solid #ccc;}
 ul, li{list-style:none;}
 .clearBoth{clear:both;}
 
-.container{width:1200px;margin:0 auto;}
+.container{width:1200px;margin:0 auto;background:#fff;}
 .header{width:100%;}
 .headerTop{width:100%;height:174px;overflow:hidden;}
 .menuTop{width:100%;background:url(../images/navbg.png) repeat-x;height:62px;position:relative;}
