--- a/qiye/css/style.css
+++ b/qiye/css/style.css
@@ -78,7 +78,7 @@ line-height:40px;letter-spacing:6px;font-weight:600;}
 
 .listItem{width:930px;margin:0 auto;margin-top:25px;}
 .listLeft{float:left;width:230px;}
-.listLeft h2{font-size:16px;font-weight:normal;padding-left:15px;line-height:40px;}
+.listLeft h2{font-size:16px;font-weight:bold;padding-left:15px;line-height:40px;}
 .listLeft ul {padding-left:15px;padding-bottom:15px;}
 .listLeft ul li{line-height:30px;}
 .listRight ul li{line-height:30px;}
