C:/Program Files (x86)/Git

--- a/qiye/css/style.css
+++ b/qiye/css/style.css
@@ -41,7 +41,7 @@ line-height:40px;letter-spacing:6px;font-weight:600;}
 .indexContent{margin-bottom:20px;min-height:500px;}
 
 .contantLeft{float:left;width:320px;overflow:hidden;margin-left:165px;}
-.contantRight{float:left;overflow:hidden;}
+.contantRight{float:left;}
 .aboutUs{margin-top:70px;}
 .curlture{line-height:26px;font-size:14px;padding-top:20px;width:1000px;margin:0 auto;}
 
