--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,7 +21,8 @@ ul, li{list-style:none;}
 
 .sjBanner{width:100%;}
 .sjBanner ul{margin-left:360px;margin-top:148px;}
-.sjBanner ul li{float:left;padding:12px;}
+.sjBanner ul li{float:left;padding:12px;font-size: 20px;font-weight: bold;color: #fff;
+height: 89px;line-height: 89px;text-align: center;}
 #lottery ul li.active{background:#f28f35; color: #fff;
     font-size: 20px;
     font-weight: bold;
