--- a/adminapp/css/style.css
+++ b/adminapp/css/style.css
@@ -8,7 +8,7 @@ a:hover{text-decoration:underline;}
 ul,li{list-style:none;padding:0px;}
 h1,h2,h3,h4,h5,h6,p{margin:0;padding-left:5px;margin-left:5px;}
 input,select,textarea{border:1px solid #333;font-family:'Microsoft YaHei','宋体','黑体',Verdana, Geneva, sans-serif;}
-html{background:#e5e4dc;}
+html{}
 .loginBox{width:500px;margin:175px auto 20px auto;background:url(../images/bgImg.png) no-repeat;height:352px;padding-top:50px;}
 .clearBoth{clear:both;padding:0;margin:0;}
 
@@ -18,9 +18,9 @@ input,button,select,textarea{outline:none}
 .loginInput{margin-left:150px;margin-top:14px;width:295px;}
 .loginInput2{margin-left:150px;margin-top:12px;width:295px;}
 .loginInput3{margin-left:50px;margin-top:14px;}
-.adminTop{border:1px solid #aaa;line-height:26px;}
-.adminMenu{border-right:1px solid #888;padding:10px;font-size:12px;line-height:22px;}
-.menuList li h2{font-size:18px;font-weight:normal;background:url(../images/ico.png) no-repeat;height:30px;line-height:30px;padding-left:35px;}
+.adminTop{border:1px solid #aaa;line-height:46px;background:#fcfcfc;font-size:16px;}
+.adminMenu{border-right:1px solid #888;padding:10px;font-size:12px;line-height:22px;background:#f8f8f8;}
+.menuList li h2{font-size:16px;font-weight:normal;background:url(../images/ico.png) no-repeat;height:30px;line-height:30px;padding-left:35px;}
 .menuList ul{padding-left:50px;font-size:14px;}
 .menuList ul li{line-height:26px;}
 
@@ -63,4 +63,4 @@ input:-webkit-autofill,
 .topMenuTagsLeft span{color:#d77a35;}
 .currentList a{text-decoration:underline;color:#ff0000;}
 .container{min-height:500px;}
-.footer{width:100%;text-align:center;padding-top:10px;padding-bottom:10px;background:#e5e4dc;margin-top:20px;}
+.footer{width:100%;text-align:center;padding-top:10px;padding-bottom:10px;background:#f4f4f4;}
