--- a/adminapp/css/style.css
+++ b/adminapp/css/style.css
@@ -62,5 +62,6 @@ input:-webkit-autofill,
 .topMenuTagsRight{float:right;margin-right:30px;}
 .topMenuTagsLeft span{color:#d77a35;}
 .currentList a{text-decoration:underline;color:#ff0000;}
-.container{min-height:500px;}
+.container{min-height:500px;font-size:14px;}
 .footer{width:100%;text-align:center;padding-top:10px;padding-bottom:10px;background:#f4f4f4;}
+.headerLineBackground{font-size:16px;}
