--- a/app/css/style.css
+++ b/app/css/style.css
@@ -93,3 +93,18 @@ height: 89px;line-height: 89px;text-align: center;}
     font-weight: bold;
     margin-left: 198px;
     margin-top: 15px;}
+
+/*统计中心*/
+.members{width:600px;margin:0 auto;}
+.headerLineBackground{text-align:center;line-height:30px;margin-top:40px;}
+.headerLineBackground font{color:#ff0000;}
+.members table tr{line-height:30px;}
+.members table tr td{border-top:1px solid #d8d8d8;}
+.backBtnMember{text-align:center;line-height:40px;}
+
+/*业务员拉的会员列表*/
+.membersUserList{width:1200px;margin:0 auto;}
+.headerLineBackground{text-align:center;line-height:30px;margin-top:15px;}
+.headerLineBackground font{color:#ff0000;}
+.membersUserList table tr{line-height:30px;}
+.membersUserList table tr td{border-top:1px solid #d8d8d8;}
