--- a/app/css/style.css
+++ b/app/css/style.css
@@ -108,3 +108,4 @@ height: 89px;line-height: 89px;text-align: center;}
 .headerLineBackground font{color:#ff0000;}
 .membersUserList table tr{line-height:30px;}
 .membersUserList table tr td{border-top:1px solid #d8d8d8;}
+.topBg{height:75px;background:#d77a35;overflow:hidden;}
