--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,5 +1,5 @@
 *{margin:0; padding:0;}
-html{font-size:12px; font-family:Verdana, Geneva, sans-serif;color:#000;}
+html{font-size:12px; font-family:'Microsoft YaHei','微软雅黑','宋体','黑体',Verdana, Geneva, sans-serif;color:#000;}
 a{color:#000;text-decoration:none;}
 a:hover{text-decoration:underline;color:#fa5000;}
 img{border:none;}
