--- a/app/css/member.css
+++ b/app/css/member.css
@@ -1,13 +1,13 @@
 *{margin:0;padding:0;}
-body{font-size:12px; font-family:'Microsoft YaHei','宋体','黑体',Verdana, Geneva, sans-serif;color:#333;}
-select,option, select option{font-family:'Microsoft YaHei','宋体','黑体',Verdana, Geneva, sans-serif;color:#333;}
+body{font-size:12px; font-family:'Microsoft YaHei','微软雅黑','宋体','黑体',Verdana, Geneva, sans-serif;color:#333;}
+select,option, select option{font-family:'Microsoft YaHei','微软雅黑','宋体','黑体',Verdana, Geneva, sans-serif;color:#333;}
 img{border:none;}
 a{text-decoration:none;color:#444;}
 a:visited{text-decoration:none;}
 a:hover{text-decoration:underline;}
 ul,li{list-style:none;padding:0px;}
 h1,h2,h3,h4,h5,h6,p{margin:0;padding-left:5px;margin-left:5px;}
-input,select,textarea{border:1px solid #333;font-family:'Microsoft YaHei','宋体','黑体',Verdana, Geneva, sans-serif;}
+input,select,textarea{border:1px solid #333;font-family:'Microsoft YaHei','微软雅黑','宋体','黑体',Verdana, Geneva, sans-serif;}
 html{}
 .loginBox{width:500px;margin:175px auto 20px auto;background:url(../images/bgImg.png) no-repeat;height:352px;padding-top:50px;}
 .clearBoth{clear:both;padding:0;margin:0;}
@@ -78,5 +78,6 @@ hr{border:none;border-bottom:1px solid #d8d8d8;}
 font-weight:normal;margin-bottom:15px;font-size:14px;}
 
 /*来访登记*/
-.register{width:300px;margin:100px auto 10px auto;}
+.register{width:350px;margin:100px auto 10px auto;font-size:14px;}
 .register input{padding-left:3px;}
+.register font{color:#ff0000;}
